<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Serial port"/>

        <Spinner
            android:id="@+id/spConfigaAtivity_spinner_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Spinner>

        <Button
            android:id="@+id/spConfigaAtivity_btn_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Finish" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eee"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/ElectricityMeter"
                android:textAlignment="center" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/spConfigaAtivity_recycler_device"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#eff"></android.support.v7.widget.RecyclerView>

            <Button
                android:id="@+id/spConfigaAtivity_btn_deleteDevice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DELETE" />
        </LinearLayout>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#eee"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ddd"
                android:padding="5dp"
                android:text="@string/AddDevice"
                android:textAlignment="center" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/ChooseProtocol"
                android:textAlignment="center" />
            <Spinner
                android:id="@+id/spConfigaAtivity_spinner_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Spinner>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/spConfigaAtivity_recycler_protocol"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#eff"></android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="33dp"
                    android:text="@string/DeviceName" />

                <EditText
                    android:id="@+id/spConfigaAtivity_txt_devName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/required" />

                <Button
                    android:id="@+id/spConfigaAtivity_btn_addDevice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Add" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eee"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp">
        <TextView
            android:id="@+id/spConfigaAtivity_txt_devDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>