<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/ElectricityMeter"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eee" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_th"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"></android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/devThFragment_btn_refresh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/refresh" />

                <Button
                    android:id="@+id/devThFragment_btn_his"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/history" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ddd" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eee"
                android:padding="10dp"
                android:text="@string/DeviceInfo"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/devThFragment_txt_info"
                android:layout_width="499dp"
                android:layout_height="579dp"
                android:layout_weight="1"
                android:text="wait content..." />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
