<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="lads.dev.fragment.DevHomeFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:text="UPS"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eee"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="15sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_ups_basicinfo_fragment_dev_home"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"/>
                <TextView
                    android:id="@+id/txt_ups_batinfo_fragment_dev_home"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"/>
                <TextView
                    android:id="@+id/txt_ups_ioinfo_fragment_dev_home"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:visibility="gone">
                    <Button
                        android:visibility="gone"
                        android:id="@+id/btnTest"
                        android:text="test"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:visibility="gone"
                        android:id="@+id/btnTest2"
                        android:text="testAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:visibility="gone"
                        android:id="@+id/btnModify"
                        android:text="btnModify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:visibility="gone"
                        android:id="@+id/btnDelete"
                        android:text="btnDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:visibility="gone"
                        android:id="@+id/btnQuery"
                        android:text="btnQuery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#eee"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/AC"
                    android:textAlignment="center"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/txt_acdata_frag_dev_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ddd"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#eee"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/EM"
                    android:textAlignment="center"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/txt_emdata_frag_dev_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ddd"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#eee"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/TH"
                    android:textAlignment="center"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/txt_thdata_frag_dev_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#ddd"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eee"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/warning"
            android:textAlignment="center"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinnerDevTypeChoose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/list_dev_type"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"></Spinner>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_warn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

    </LinearLayout>


</LinearLayout>
